2005-03-04  Per Bothner  <per@bothner.com>

	* kawa/repl.java: Update Interpreter->Lanuguage various places.
	* kawa/Shell.java: Likewise.
	* kawa/GuiConsole.java: Likewise.
	* kawa/TelnetRepl.java: Likewise.
	* kawa/lang/Lambda.java: Likewise.
	* kawa/lang/CompileFile.java: Likewise.
	* kawa/standard/Scheme.java: Likewise.
	* kawa/standard/define_autoload.java: Likewise.
	* kawa/standard/define_syntax.java: Likewise.
	* kawa/standard/load.java: Likewise.
	* kawa/standard/not.java: Likewise.
	* kawa/standard/require.java: Likewise.
	* kawa/standard/syntax.java: Likewise.

	* kawa/standard/require.java (importDefinitions): Change to use
	FieldLocation.  Better handling of non-static modules and re-export.
	Don't set 'base' of fdecl (since it might be shared); instead create
	a ReferenceExp alias with a 'context'.
	(makeDeclInModule): Various tweaks.
	* kawa/lang/Translator.java (rewrite): Use FieldLocation.

2005-03-03  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java (kawaEnvironment): More precise type.
	* kawa/standard/ScmEnv.java (<init>): Parameter is SimpleEnvironment,
	to match superclass parameter.

	* kawa/standard/Scheme.java: Remove definition of 'emacs' fnction - it
	doesn't work for Scheme, and causes order-dependency awkwardness when
	compiling CommonLisp/ELisp.

	* Makefile.am (SUBDIR): Some re-ordering to reduce dependencies.
	Specifically, jemacs and commonlisp import scheme functions, including
	ones in gnu.kawa.slib, so we sant to compile them later.

	* kawa/standard/Scheme.java: Function 'children' has been moved.

2005-02-24  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java registerEnvironment):
	Use new setDefaults method.

	* kawa/repl.java (getInterpreterFromFilenameExtension): Change return
	type and name to getLanguageFromFilenameExtension.
	(getInterpreter): Also change return type and rename to getLanguage.

2005-02-23  Per Bothner  <per@bothner.com>

	* kawa/lang/Quote.java: Add an option to not namespace-expand.